2009-10-25 14:05 adburton

	* configure.ac, NEWS: Tagged for new release

2009-10-18 17:20 adburton

	* src/game_list.c, src/io.c: Add additional g_return_val_if_fail checks

2009-10-06 20:57 adburton

	* src/gmameui-zip-utils.h: Fix #ifndef call referencing wrong file
	  (Debian Bug 547699)

2009-09-22 20:40 adburton

	* data/options.glade, src/: mame_options.c, mame_options_dialog.c,
	  mame_options_legacy_dialog.c, xmame_options.c: Add support for -keymap
	  and -keymap_file options (SF Bug 2847216)

2009-09-11 20:17 adburton

	* data/directories.builder, data/Makefile.am, po/POTFILES.in,
	  src/directories.c: Migrate Directories dialog to GtkBuilder, add
	  buttons to open homepages for various resource files

2009-09-05 21:15 adburton

	* data/options.glade, src/: callbacks.c, gmameui.c, interface.c,
	  mame-exec.c, mame_options.c, mame_options.h, mame_options_dialog.c,
	  mame_options_dialog.h, mame_options_legacy_dialog.c:
	  Refactor mame_options and mame_options_dialog to be like legacy versions,
	  add support for dynamically finding effect files (SF Feature Request
	  2780394)

2009-09-03 21:23 adburton

	* src/: directories.c, gmameui-rominfo-dlg.c, callbacks.c, mame_options.c:
	  Fix compilation errors, segfaults (SF Bug 2848961)
	* src/game_list.c: Use locale-sensitive function strtod to compare
	  against the gamelist while we use a version with a decimal point
	  (SF Bug 2847787)

2009-09-02 22:02 adburton

	* configure.ac, po/POTFILES.in:
	  data/: Makefile.am, rom_info.builder:
	  src/: Makefile.am, gmameui-rominfo-dlg.c, gmameui.h, gui_prefs.h,
	  rom_entry.c, rom_entry.h, xmame_options.c:
	  Add additional information to ROM info dialog, migrate to GtkBuilder

2009-08-29 19:05 adburton

	* src/directories.c: Overwrite invalid default values with MAME subdirs

2009-08-29 18:30 adburton

	* configure.ac, NEWS: Tagged for new release

2009-08-29 17:40 adburton

	* src/gui.c: Fix translation of "No executables" message