@@ -4,3 +4,5 @@ VOID:STRING
 VOID:INT
 VOID:BOOLEAN
 VOID:POINTER
+VOID:VOID
+
